--- a/package.json
+++ b/package.json
@@ -14,28 +14,29 @@
     "gulp-filter": "^0.4.1",
     "gulp-flatten": "^0.0.2",
     "gulp-imagemin": "^0.5.0",
+    "gulp-inject": "~0.4.1",
     "gulp-jshint": "^1.5.3",
+    "gulp-karma": "0.0.4",
     "gulp-livereload": "^1.2.0",
     "gulp-load-plugins": "^0.5.0",
+    "gulp-minify-html": "~0.1.3",
+    "gulp-ng-html2js": "~0.1.6",
+    "gulp-ngmin": "^0.2.0",
+    "gulp-protractor": "0.0.7",
+    "gulp-rev": "^0.3.2",
+    "gulp-rev-replace": "^0.1.0",
     "gulp-ruby-sass": "^0.4.3",
+    "gulp-sass": "^0.7.2",
     "gulp-size": "^0.3.0",
     "gulp-uglify": "^0.2.1",
     "gulp-useref": "^0.4.2",
-    "gulp-ngmin": "^0.2.0",
-    "gulp-rev": "^0.3.2",
-    "gulp-rev-replace": "^0.1.0",
-    "gulp-ng-html2js": "~0.1.6",
-    "gulp-minify-html": "~0.1.3",
-    "gulp-inject": "~0.4.1",
     "jshint-stylish": "^0.1.5",
-    "opn": "^0.1.1",
-    "wiredep": "^1.4.3",
-    "gulp-karma": "0.0.4",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "gulp-protractor": "0.0.7",
+    "opn": "^0.1.1",
     "protractor": "~0.22.0",
-    "require-dir": "~0.1.0"
+    "require-dir": "~0.1.0",
+    "wiredep": "^1.4.3"
   },
   "engines": {
     "node": ">=0.10.0"
