--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-ng-html2js": "~0.1.6",
     "gulp-ngmin": "^0.2.0",
     "gulp-protractor": "0.0.7",
+    "gulp-requirejs": "^0.1.3",
     "gulp-rev": "^0.3.2",
     "gulp-rev-replace": "^0.1.0",
     "gulp-ruby-sass": "^0.4.3",
